--- a/EclipseProg/Scouthis/res/layout/fragment_section_stepcounter_run.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_stepcounter_run.xml
@@ -34,6 +34,7 @@
         android:scaleType="fitCenter"
         android:src="@drawable/bandiera_scacchi"
         app:cb_color="@color/btn_background_traspar"
+        app:cb_pressed_ring_width="0dip"
         app:cb_percent_down="50"
         app:cb_percent_left="50"
         app:cb_percent_scale="50" />
