--- a/EclipseProg/Scouthis/res/layout/fragment_section_alert_user_gps.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_alert_user_gps.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/alert_gps_container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content" >
@@ -14,14 +15,17 @@
         android:textSize="15sp"
         android:textStyle="italic" />
 
-    <ImageButton
+    <it.poli.android.scoutthisme.tools.CircleButton
         android:id="@+id/setGpsOn"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:background="@drawable/btn_gps_alert_selector"
-        android:padding="5dp"
-        android:src="@drawable/actionb_gps" />
+        android:scaleType="centerCrop"
+        android:src="@drawable/actionb_gps"
+        app:cb_color="@color/btn_background"
+        app:cb_percent_down="20"
+        app:cb_percent_scale="80"
+        app:cb_pressed_ring_width="8dip" />
 
 </RelativeLayout>
