--- a/EclipseProg/Scouthis/res/layout/activity_main_iconed_tabs.xml
+++ b/EclipseProg/Scouthis/res/layout/activity_main_iconed_tabs.xml
@@ -3,19 +3,25 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+    
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 
     <com.viewpagerindicator.TabPageIndicator
         android:id="@+id/indicator"
         android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
         style="@style/Tab" />
     	
     <android.support.v4.view.ViewPager
+		
         android:id="@+id/pager"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        style="@style/FragmentContainer" />
+     >
+     
+        
+    </android.support.v4.view.ViewPager>
 
 </LinearLayout>
