--- a/EclipseProg/Scouthis/res/layout/fragment_section_findfriends_logged.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_findfriends_logged.xml
@@ -6,6 +6,9 @@
     android:layout_height="match_parent"
     android:layout_margin="@dimen/fragment_margin"
     android:orientation="vertical"
+    
+    style="?app_background"
+    
     android:padding="@dimen/fragment_padding" >
 
     <LinearLayout
