--- a/EclipseProg/Scouthis/res/layout/fragment_section_gps.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_gps.xml
@@ -2,6 +2,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="@dimen/fragment_margin"
+    
+    style="?app_background"
+    
     android:padding="@dimen/fragment_padding" >
 
     <RelativeLayout
@@ -18,7 +21,9 @@
 
         <TextView
             android:id="@+id/lblDescription"
-            style="@style/FragmentTitle"
+            
+            style="?fragmentTitleStyle"
+            
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/gps_alert_container"
