--- a/EclipseProg/Scouthis/res/layout/fragment_section_newsfeed.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_newsfeed.xml
@@ -3,6 +3,9 @@
     android:layout_height="match_parent"
     android:layout_margin="@dimen/fragment_margin"
     android:orientation="vertical"
+    
+    style="?app_background"
+    
     android:padding="@dimen/fragment_padding" >
 
     <RelativeLayout
@@ -22,7 +25,9 @@
 
         <TextView
             android:id="@+id/lblNewsMessage"
-            style="@style/FragmentTitle"
+            
+            style="?fragmentTitleStyle"
+            
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/imgNewsMessage"
@@ -53,7 +58,9 @@
 
         <TextView
             android:id="@+id/txtNewsError"
-            style="@style/FragmentTitle"
+            
+            style="?fragmentTitleStyle"
+            
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
