--- a/EclipseProg/Scouthis/res/layout/fragment_section_stepcounter_home.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_stepcounter_home.xml
@@ -9,6 +9,10 @@
     android:gravity="center"
     android:orientation="vertical"
     android:padding="@dimen/fragment_padding"
+    
+    style="?app_background"
+    
+    
     tools:context="it.poli.android.scoutthisme.MainActivityWithIcons" >
 
     <ImageView
@@ -30,8 +34,11 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
             android:scaleType="centerInside"
+            
+            style="?circle_background"
+            
             android:src="@drawable/run_new"
-            app:cb_color="@color/btn_background" />
+             />
 
         <RelativeLayout
             android:id="@+id/newRunTexts"
@@ -43,7 +50,7 @@
 
             <TextView
                 android:id="@+id/txtNewrun"
-                style="@style/FragmentTitle"
+                style="?fragmentTitleStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/stepcounter_newrun" />
@@ -66,7 +73,10 @@
             android:layout_marginTop="20dp"
             android:scaleType="centerInside"
             android:src="@drawable/photo_book"
-            app:cb_color="@color/btn_background" />
+            
+            style="?circle_background"
+            
+            />
 
         <RelativeLayout
             android:id="@+id/seeHistoryTexts"
@@ -78,7 +88,7 @@
 
             <TextView
                 android:id="@+id/txtSeeHistory"
-                style="@style/FragmentTitle"
+                style="?fragmentTitleStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
