--- a/EclipseProg/Scouthis/res/values/attrs.xml
+++ b/EclipseProg/Scouthis/res/values/attrs.xml
@@ -10,9 +10,9 @@
     </declare-styleable>
    
    <attr name="fragmentTitleStyle"    format="reference" />
-   
    <attr name="app_background"        format="reference" />
-
    <attr name="circle_background"     format="reference" />
+
+   <attr name="tab_view_background"   format="reference" />
    
 </resources>
