--- a/EclipseProg/Scouthis/res/drawable/edo_tab_unselected_green.xml
+++ b/EclipseProg/Scouthis/res/drawable/edo_tab_unselected_green.xml
@@ -11,10 +11,10 @@
     </item>
 
 
-    <item android:top="90px" android:left="0px" android:bottom="0px" android:right="0px">
+    <item android:top="@dimen/tab_mid_place" android:left="0px" android:bottom="0px" android:right="0px">
         <shape android:shape="rectangle">
             <size android:width="20px"
-                android:height="1px"/>
+                android:height="@dimen/tab_small_line"/>
             <solid android:color="@color/dark_green_trasp"/>
         </shape>
     </item>
