--- a/EclipseProg/Scouthis/res/values/dimens.xml
+++ b/EclipseProg/Scouthis/res/values/dimens.xml
@@ -18,4 +18,13 @@
     <dimen name="fragment_padding">5dp</dimen>
     <dimen name="fragment_border_top">5dp</dimen>
     
+    <!-- tab bar   !!!-->
+    <dimen name="tab_high_place">100px</dimen>
+    <dimen name="tab_mid_place">100px</dimen>
+    <dimen name="tab_big_line">3px</dimen>
+    <dimen name="tab_small_line">3px</dimen>
+    
+    <!--   -->
+    
+    
 </resources>
