--- a/EclipseProg/Scouthis/res/drawable/edo_tab_unselected_pressed_green.xml
+++ b/EclipseProg/Scouthis/res/drawable/edo_tab_unselected_pressed_green.xml
@@ -4,17 +4,17 @@
     <item android:top="0px" android:left="0px" android:bottom="0px" android:right="0px">
         <shape android:shape="rectangle">
             <size android:width="9px"
-                android:height="10px"/>
+                android:height="20px"/>
             <solid android:color="@color/dark_green_trasp"/>
         </shape>
     </item>
 
 
-    <item android:top="@dimen/tab_small_line" android:left="0px" android:bottom="0px" android:right="0px">
+    <item android:top="@dimen/tab_mid_place" android:left="0px" android:bottom="0px" android:right="0px">
         <shape android:shape="rectangle">
-            <size android:width="20px"
+            <size android:width="40px"
                 android:height="@dimen/tab_small_line"/>
-            <solid android:color="@color/dark_green"/>
+            <solid android:color="@color/green"/>
         </shape>
     </item>
 </layer-list>
