--- a/EclipseProg/Scouthis/res/values/colors.xml
+++ b/EclipseProg/Scouthis/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="azure_trasp">#704CA5FF</color>
     <color name="azure_light_trasp">#705CB5FF</color>
     
+    <color name="green">#009800</color>
     
     <color name="dark_green">#004200</color>
     <color name="dark_green_trasp">#CA004200</color>
