--- a/EclipseProg/Scouthis/res/drawable/edo_tab_unselected_pressed_green.xml
+++ b/EclipseProg/Scouthis/res/drawable/edo_tab_unselected_pressed_green.xml
@@ -5,7 +5,7 @@
         <shape android:shape="rectangle">
             <size android:width="9px"
                 android:height="20px"/>
-            <solid android:color="@color/dark_green_trasp"/>
+            <solid android:color="@color/green_dark_trasp"/>
         </shape>
     </item>
 
