--- a/EclipseProg/Scouthis/res/drawable/edo_tab_selected_green.xml
+++ b/EclipseProg/Scouthis/res/drawable/edo_tab_selected_green.xml
@@ -14,7 +14,7 @@
         <shape android:shape="rectangle">
             <size android:width="20px"
                 android:height="@dimen/tab_big_line"/>
-            <solid android:color="@color/dark_green"/>
+            <solid android:color="@color/green_dark"/>
         </shape>
     </item>
 </layer-list>
