--- a/EclipseProg/Scouthis/res/values/strings_fragments.xml
+++ b/EclipseProg/Scouthis/res/values/strings_fragments.xml
@@ -6,9 +6,9 @@
     <string name="fragments_new">Nuovo</string>
     <string name="fragments_start">Start</string>
     <string name="fragments_waiting_dots">&#8230;</string>
-    <string name="fragments_general_alert">Questa applicazione ha bisogno del GPS. Clicca sul bottone a destra per attivarlo!</string>
-    <string name="fragments_step_alert">Il Contapassi ha bisogno del GPS. Clicca sul bottone a destra per attivarlo!</string>
-    <string name="fragments_friends_alert">Il Trovamici ha bisogno del GPS. Clicca sul bottone a destra per attivarlo!</string>
+    <string name="fragments_general_alert">Questa applicazione ha bisogno del GPS. Tocca il bottone a destra per attivarlo!</string>
+    <string name="fragments_step_alert">Il Contapassi ha bisogno del GPS. Tocca il bottone a destra per attivarlo!</string>
+    <string name="fragments_friends_alert">Il Trovamici ha bisogno del GPS. Tocca il bottone a destra per attivarlo!</string>
     <string name="generic_status_gps_deactivated">&lt;b&gt;Stato:&lt;/b&gt; GPS non attivo.</string>
     <string name="generic_status_network_unavailable">&lt;b&gt;Stato:&lt;/b&gt; Rilevato problema di connessione.</string>
     <string name="generic_status_waiting_gps">&lt;b&gt;Stato:&lt;/b&gt; In attesa del GPS&#8230;</string>
@@ -46,9 +46,9 @@
     <!-- Strings related to stepcounter fragment -->
     <string name="stepcounter_gohome">Torna al Contapassi</string>
     <string name="stepcounter_newrun">Nuova corsa</string>
-    <string name="stepcounter_newrun_description">Clicca sul bottone per iniziare subito un nuovo percorso</string>
+    <string name="stepcounter_newrun_description">Tocca il bottone e inizia subito un nuovo percorso!</string>
     <string name="stepcounter_seehistory">Vedi storico</string>
-    <string name="stepcounter_seehistory_description">Cliccando sul bottone potrai rivedere tutti i percorsi già effettuati con le relative statitiche</string>
+    <string name="stepcounter_seehistory_description">Tocca il bottone e  rivedi tutti i tuoi percorsi!</string>
     <string name="stepcounter_statistic">Statistiche corsa</string>
     <string name="stepcounter_steps_done">Passi effettuati</string>
     <string name="stepcounter_distance_done">Distanza percorsa</string>
@@ -72,7 +72,8 @@
     <string name="alarms_days">Quali giorni suonerà?</string>
     <string name="alarms_birds">Che uccello ti sveglierà?</string>
     <string name="alarms_home_title">Le tue sveglie</string>
-    <string name="alarms_home_title_description">Clicca sul bottone per aggiungere una nuova sveglia</string>
+    <string name="alarms_home_title_description">
+        Tocca il bottone per aggiungere una nuova sveglia</string>
 
     <!-- Strings related to utility fragment -->
     <string name="utility_camera_not_available">Fotocamera non rilevata.</string>
